Actualizado a la ruta relativa

--- a/scripts/Untitled.ipynb
+++ b/scripts/Untitled.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6b3cbe8d-fed7-4959-aca3-79d0693552c9",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "71c24d27-509d-4d51-ac7a-48bb583e7e38",
    "metadata": {},
    "outputs": [
@@ -222,20 +222,20 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lectura de datos\n",
-    "df = pd.read_csv(\"C:/Users/t.morin.foronda/TGSS/kaggle_competition/data/train.csv\")\n",
+    "df = pd.read_csv(\"../data/train.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "bf8e2b71-ba26-4ed5-b0fe-5e116eef9848",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8a53eb84-92f4-4426-ba82-a971ef1417e0",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
        "[8 rows x 38 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e06da669-3edf-414c-86f3-a79200168927",
+   "id": "efa95c6f-6ae9-437a-93a9-6463004c6c56",
    "metadata": {},
    "outputs": [],
    "source": []
