--- a/scripts/Carlos.ipynb
+++ b/scripts/Carlos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "32a25587",
    "metadata": {},
    "outputs": [],
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "1988ad6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df_train=pd.read_csv(r'C:\\Users\\c.pascual.fernandez\\OneDrive - Accenture\\Desktop\\teso_kaggle\\kaggle_competition\\data\\train.csv')\n",
-    "df_test= pd.read_csv(r'C:\\Users\\c.pascual.fernandez\\OneDrive - Accenture\\Desktop\\teso_kaggle\\kaggle_competition\\data\\test.csv')"
+    "df_train=pd.read_csv(\"../data/train.csv\")\n",
+    "df_test= pd.read_csv(\"../data/test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "cf071620",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "[1460 rows x 81 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
